# godo-telegram-bot-rust

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
godo_telegram_bot/: Cargo.toml
godo_telegram_bot/src/: main.rs
